# files-db-mcp

./: .coverage  .coverage.Jannis-MacBook-Air.local.79779.XzRUJIrx  .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.md  coverage.xml  docker-compose.ci.yml  docker-compose.yml  files-db-mcp  install.sh  pyproject.toml  run.sh  setup.sh  test-coverage-message.txt
.docker/: docker-compose.ci.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.tasks/: README.md  ROADMAP.md  TASK-006_report.md  TASK-007.md  TASK-011.md  TASK-011_report.md  TASK-012.md  TASK-013.md  TASK-013_report.md  TASK-014_report.md  TASK-014_test_coverage.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-019_report.md  TASK-020.md  TASK-020_report.md  TASK-022.md  TASK-027.md  TASK-028.md  backlog.md  sprint2_status.md  test_fix_plan.md
.tasks/sprints/: sprint-1.md  sprint-2.md
.tasks/templates/: bug_report.md  feature_request.md  tech_debt.md
ai-assist/: CLAUDE.md  README.md  architecture.md
ai-assist/contexts/: project_context_template.md
ai-assist/guidelines/: code_generation.md  llm_interaction_protocol.md  security_review.md
ai-assist/prompts/: context_handoff.md
ai-assist/templates/: api_design_template.md  architecture_template.md  dev_environment_setup.md  llm_roles_template.md  monitoring_setup.md  onboarding_guide.md  performance_optimization.md  project_journal_template.md  test_suite_template.md  user_documentation.md
ai-assist/workflows/: ci_cd_workflow.md  roadmap_backlog_manager.md
config/: .pre-commit-config.yaml
docs/: api_reference.md  beta_release_plan.md  claude_mcp_integration.md  claude_mcp_test_summary.md  configuration_reference.md  conversation_summary.md  docker_setup.md  documentation_plan.md  incremental_indexing.md  installation_guide.md  installation_issues.md  llm_devops_toolkit.md  model_configuration.md  performance_tuning.md  project_initialization.md  project_structure.md  sse_api.md  troubleshooting.md  use_case_examples.md
install/: install.sh  setup.sh
scripts/: Makefile  run.sh  test_claude_mcp.py  test_mcp_endpoints.py
src/: __init__.py  claude_mcp.py  claude_mcp_server.py  file_processor.py  file_watcher.py  main.py  mcp_interface.py  project_initializer.py  requirements.txt  sse_interface.py  vector_search.py
tests/: __init__.py  conftest.py  test_claude_mcp.py  test_mcp.py
tests/integration/: __init__.py  test_claude_mcp_integration.py  test_file_indexing.py  test_mcp_search.py
tests/unit/: __init__.py  test_claude_mcp.py  test_file_processor.py  test_file_watcher.py  test_incremental_indexing.py  test_mcp_interface.py  test_sse_interface.py  test_vector_search.py
